main/linux-pam: musl fix u_int types

--- a/main/linux-pam/APKBUILD
+++ b/main/linux-pam/APKBUILD
@@ -3,9 +3,9 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=linux-pam
 pkgver=1.3.1
-pkgrel=1
-pkgdesc="pluggable authentication modules for linux"
-url="http://www.kernel.org/pub/linux/libs/pam"
+pkgrel=2
+pkgdesc="Linux PAM (Pluggable Authentication Modules for Linux)"
+url="https://www.kernel.org/pub/linux/libs/pam"
 arch="all"
 license="BSD-3-Clause"
 depends_dev="gettext-dev"
@@ -16,6 +16,7 @@ source="
 	https://github.com/linux-pam/linux-pam/releases/download/v$pkgver/Linux-PAM-$pkgver.tar.xz
 	fix-compat.patch
 	libpam-fix-build-with-eglibc-2.16.patch
+	musl-fix_uint.patch
 	musl-fix-pam_exec.patch
 
 	base-auth.pamd
@@ -31,15 +32,14 @@ source="
 
 builddir="$srcdir"/Linux-PAM-$pkgver
 prepare() {
-	cd "$builddir"
 	default_prepare
 	# disable insecure modules
 	sed -e 's/pam_rhosts//g' -i modules/Makefile.am
+
+	autoreconf -vif
 }
 
 build() {
-	cd "$builddir"
-	autoreconf -vif
 	[ "$CLIBC" = "musl" ] && export ac_cv_search_crypt=no
 	./configure \
 		--build=$CBUILD \
@@ -56,7 +56,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 
 	# install our pam.d files
@@ -77,7 +76,8 @@ package() {
 
 sha512sums="6bc8e2a5b64686f0a23846221c5228c88418ba485b17c53b3a12f91262b5bb73566d6b6a5daa1f63bbae54310aee918b987e44a72ce809b4e7c668f0fadfe08e  Linux-PAM-1.3.1.tar.xz
 52b97e23084f7b835ce1fa441663f91a50ea797cb38ba2c6662bcdaf0d25ba487118442674ac347fb17353af126dd6b3b696612faa56cac428dd842d14e1c90d  fix-compat.patch
-f49edf3876cc6bcb87bbea4e7beaeb0a382d596898c755f5fbaf6c2ed4e0c8f082b2cd16dde8a74af82bb09a1334f463e07a4bb5b8a48f023ff90a67ad2fdd44  libpam-fix-build-with-eglibc-2.16.patch
+24ec4c755b4034189ea05b1af69269e094964efd745b470a6ccb268e80550b56c96027214e918168aa942aa426bfe0b1487801e95ef2bf0c488f47eb49f1d9e1  libpam-fix-build-with-eglibc-2.16.patch
+2bc12415bacdb766c1a8d8aa43c84c17bb2ddc9a9b910d52830259ad18e54465cc077d7b2974a71c40867c90910751339f283731c7298b983acd4ae83d7c98a1  musl-fix_uint.patch
 08323428e13f65300d7638233fd8ab25c582a08ffe0a282ed43f69ccb428dea9eb185da3ae9dd2634f021c16592f194f99348758bd9e761c29435652b544f543  musl-fix-pam_exec.patch
 ea6a10957ba9ec50d982bfabafb35060426ac797936f874097b4fa7620b89fd2ba3be9757401f9b787956fb23879d8ef73676f7703e75fcef3dca0b9559c4167  base-auth.pamd
 85462201a4044c7e170e617d39b0eceb4790abc6c0504999117548030a16d80a9d2078d1ad97690d7d346e6374201f0c52e792ccb08ce2b1c4bbf0cc2be96f5b  base-account.pamd
