--- a/community/perl-devel-overloadinfo/APKBUILD
+++ b/community/perl-devel-overloadinfo/APKBUILD
@@ -8,12 +8,10 @@ pkgrel=1
 pkgdesc="introspect overloaded operators"
 url="https://metacpan.org/release/Devel-OverloadInfo/"
 arch="noarch"
-license="GPL-1.0-or-later Artistic-1.0-Perl"
-cpandepends="perl-mro-compat perl-sub-identify perl-package-stash"
-cpancheckdepends="perl-test-fatal"
-depends="$cpandepends"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl-mro-compat perl-sub-identify perl-package-stash"
+checkdepends="perl-test-fatal"
 makedepends="perl-dev"
-checkdepends="$cpancheckdepends"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/I/IL/ILMARI/Devel-OverloadInfo-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
