community/perl-image-info: move from testing

--- a/community/perl-image-info/APKBUILD
+++ b/community/perl-image-info/APKBUILD
@@ -9,8 +9,7 @@ pkgdesc="Extract meta information from image files"
 url="https://metacpan.org/release/Image-Info/"
 arch="noarch"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-io-stringy"
-depends="$cpandepends"
+depends="perl-io-stringy"
 makedepends="perl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/S/SR/SREZIC/Image-Info-$pkgver.tar.gz"
