--- a/community/perl-locale-msgfmt/APKBUILD
+++ b/community/perl-locale-msgfmt/APKBUILD
@@ -8,7 +8,7 @@ pkgrel=0
 pkgdesc="Compile .po files to .mo files"
 url="https://metacpan.org/release/Locale-Msgfmt/"
 arch="noarch"
-license="GPL-1.0-or-later Artistic-1.0-Perl"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
 makedepends="perl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/A/AZ/AZAWAWI/Locale-Msgfmt-$pkgver.tar.gz"
