--- a/community/perl-spreadsheet-xlsx/APKBUILD
+++ b/community/perl-spreadsheet-xlsx/APKBUILD
@@ -9,8 +9,7 @@ pkgdesc="Perl extension for reading MS Excel 2007 files;"
 url="https://metacpan.org/release/Spreadsheet-XLSX/"
 arch="noarch"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-spreadsheet-parseexcel perl-archive-zip perl-test-nowarnings"
-depends="$cpandepends"
+depends="perl-spreadsheet-parseexcel perl-archive-zip perl-test-nowarnings"
 makedepends="perl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/M/MI/MIKEB/Spreadsheet-XLSX-$pkgver.tar.gz"
