community/perl-sub-exporter-formethods: move from testing

--- a/community/perl-sub-exporter-formethods/APKBUILD
+++ b/community/perl-sub-exporter-formethods/APKBUILD
@@ -9,11 +9,9 @@ pkgdesc="helper routines for using Sub::Exporter to build methods"
 url="https://metacpan.org/release/Sub-Exporter-ForMethods/"
 arch="noarch"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-sub-exporter perl-sub-name"
-cpancheckdepends="perl-namespace-autoclean"
-depends="$cpandepends"
+depends="perl-sub-exporter perl-sub-name"
+checkdepends="perl-namespace-autoclean"
 makedepends="perl-dev"
-checkdepends="$cpancheckdepends"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/R/RJ/RJBS/Sub-Exporter-ForMethods-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
