community/perl-uri-fromhash: move from testing

--- a/community/perl-uri-fromhash/APKBUILD
+++ b/community/perl-uri-fromhash/APKBUILD
@@ -9,11 +9,9 @@ pkgdesc="Build a URI from a set of named parameters"
 url="https://metacpan.org/release/URI-FromHash/"
 arch="noarch"
 license="Artistic-2.0"
-cpandepends="perl-params-validate perl-uri"
-cpancheckdepends="perl-test-fatal"
-depends="$cpandepends"
+depends="perl-params-validate perl-uri"
+checkdepends="perl-test-fatal"
 makedepends="perl-dev"
-checkdepends="$cpancheckdepends"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/D/DR/DROLSKY/URI-FromHash-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
