community/perl-xml-easy: move from testing

--- a/community/perl-xml-easy/APKBUILD
+++ b/community/perl-xml-easy/APKBUILD
@@ -9,10 +9,8 @@ pkgdesc="XML processing with a clean interface"
 url="https://metacpan.org/release/XML-Easy/"
 arch="all"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-params-classify"
-cpanmakedepends="perl-module-build"
-depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends"
+depends="perl-params-classify"
+makedepends="perl-dev perl-module-build"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/Z/ZE/ZEFRAM/XML-Easy-$pkgver.tar.gz
 	syntax_main-test.patch"
