--- a/community/perl-xml-tidy/APKBUILD
+++ b/community/perl-xml-tidy/APKBUILD
@@ -9,10 +9,8 @@ pkgdesc="tidy indenting of XML documents"
 url="https://metacpan.org/release/XML-Tidy/"
 arch="noarch"
 license="GPL-3.0-only"
-cpandepends="perl-xml-xpath perl-math-basecnv"
-cpanmakedepends="perl-test-pod perl-test-pod-coverage"
-depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends"
+depends="perl-xml-xpath perl-math-basecnv"
+makedepends="perl-dev perl-test-pod perl-test-pod-coverage"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/P/PI/PIP/XML-Tidy-$pkgver.tgz"
 builddir="$srcdir/$_pkgreal-$pkgver"
