community/perl-moosex-types-uri: move from testing

--- a/community/perl-moosex-types-uri/APKBUILD
+++ b/community/perl-moosex-types-uri/APKBUILD
@@ -8,9 +8,8 @@ pkgrel=1
 pkgdesc="URI related types and coercions for Moose"
 url="https://metacpan.org/release/MooseX-Types-URI/"
 arch="noarch"
-license="GPL-1.0-or-later Artistic-1.0-Perl"
-cpandepends="perl-namespace-autoclean perl-moosex-types-path-class perl-uri-fromhash perl-moosex-types perl-uri"
-depends="$cpandepends"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl-namespace-autoclean perl-moosex-types-path-class perl-uri-fromhash perl-moosex-types perl-uri"
 makedepends="perl-devel-overloadinfo perl-module-build-tiny perl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/E/ET/ETHER/MooseX-Types-URI-$pkgver.tar.gz"
