--- a/community/perl-moosex-types-common/APKBUILD
+++ b/community/perl-moosex-types-common/APKBUILD
@@ -8,12 +8,10 @@ pkgrel=1
 pkgdesc="A library of commonly used type constraints"
 url="https://metacpan.org/release/MooseX-Types-Common/"
 arch="noarch"
-license="GPL-1.0-or-later Artistic-1.0-Perl"
-cpandepends="perl-moosex-types"
-cpancheckdepends="perl-test-deep perl-test-warnings"
-depends="$cpandepends"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl-moosex-types"
+checkdepends="perl-test-deep perl-test-warnings"
 makedepends="perl-devel-overloadinfo perl-module-build-tiny perl-dev"
-checkdepends="$cpancheckdepends"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/E/ET/ETHER/MooseX-Types-Common-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
