community/perl-moosex-types-datetime: move from testing

--- a/community/perl-moosex-types-datetime/APKBUILD
+++ b/community/perl-moosex-types-datetime/APKBUILD
@@ -8,13 +8,11 @@ pkgrel=1
 pkgdesc="L<DateTime> related constraints and coercions for Moose"
 url="https://metacpan.org/release/MooseX-Types-DateTime/"
 arch="noarch"
-license="GPL-1.0-or-later Artistic-1.0-Perl"
-cpandepends="perl-namespace-clean perl-datetime perl-moosex-types
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl-namespace-clean perl-datetime perl-moosex-types
 	perl-datetime-timezone perl-moose perl-datetime-locale"
-cpancheckdepends="perl-test-fatal"
-depends="$cpandepends"
+checkdepends="perl-test-fatal"
 makedepends="perl-devel-overloadinfo perl-module-build-tiny perl-dev"
-checkdepends="$cpancheckdepends"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/E/ET/ETHER/MooseX-Types-DateTime-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
