--- a/community/perl-moosex-types-path-class/APKBUILD
+++ b/community/perl-moosex-types-path-class/APKBUILD
@@ -8,12 +8,10 @@ pkgrel=1
 pkgdesc="A Path::Class type library for Moose"
 url="https://metacpan.org/release/MooseX-Types-Path-Class/"
 arch="noarch"
-license="GPL-1.0-or-later Artistic-1.0-Perl"
-cpandepends="perl-path-class perl-moosex-types"
-cpancheckdepends="perl-test-needs"
-depends="$cpandepends"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl-path-class perl-moosex-types"
+checkdepends="perl-test-needs"
 makedepends="perl-devel-overloadinfo perl-module-build-tiny perl-dev"
-checkdepends="$cpancheckdepends"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/E/ET/ETHER/MooseX-Types-Path-Class-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
