--- a/community/perl-math-basecnv/APKBUILD
+++ b/community/perl-math-basecnv/APKBUILD
@@ -6,7 +6,7 @@ pkgrel=1
 pkgdesc="Math::BaseCnv perl module"
 url="https://metacpan.org/release/Math-BaseCnv/"
 arch="noarch"
-license="GPL-3.0"
+license="GPL-3.0-only"
 depends="perl"
 makedepends="perl-dev"
 subpackages="$pkgname-doc"
@@ -15,18 +15,15 @@ source="https://cpan.metacpan.org/authors/id/P/PI/PIP/Math-BaseCnv-$pkgver.tgz"
 builddir="$srcdir"/Math-BaseCnv-$pkgver
 
 build() {
-	cd "$builddir"
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 	make
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
