--- a/testing/perl-getopt-long-descriptive/APKBUILD
+++ b/testing/perl-getopt-long-descriptive/APKBUILD
@@ -3,16 +3,14 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=perl-getopt-long-descriptive
 _pkgreal=Getopt-Long-Descriptive
-pkgver=0.104
-pkgrel=2
+pkgver=0.105
+pkgrel=0
 pkgdesc="Getopt::Long, but simpler and more powerful"
 url="https://metacpan.org/release/Getopt-Long-Descriptive"
 arch="noarch"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-sub-exporter perl-params-validate"
-cpanmakedepends="perl-test-warnings perl-test-fatal perl-cpan-meta-check"
-depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends"
+depends="perl perl-sub-exporter perl-params-validate"
+makedepends="perl-dev perl-test-warnings perl-test-fatal perl-cpan-meta-check"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/R/RJ/RJBS/$_pkgreal-$pkgver.tar.gz"
 
@@ -35,4 +33,4 @@ package() {
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="5579faa6f9012cd03ac4d51149b0854771f15d8e324f8df345fe6af1a8f3fdeaaef6c5becee55bf77515da85d92aa61a63dfc5ee8264d2d0368e02a4a4cbd7fa  Getopt-Long-Descriptive-0.104.tar.gz"
+sha512sums="e7528ac509bc7fb49ee59a8ed8dec0c9a619a8f34c207e7a9185829666248797211a56576721b7fc8cdd44ae55d2d45f048958b79a6228ee76d91c3a52685236  Getopt-Long-Descriptive-0.105.tar.gz"
