main/perl-http-message: upgrade to 6.22

--- a/main/perl-http-message/APKBUILD
+++ b/main/perl-http-message/APKBUILD
@@ -2,16 +2,15 @@
 # Maintainer: Kiyoshi Aman <kiyoshi.aman@gmail.com>
 pkgname=perl-http-message
 _pkgreal=HTTP-Message
-pkgver=6.18
-pkgrel=1
+pkgver=6.22
+pkgrel=0
 pkgdesc="HTTP style messages"
 url="https://metacpan.org/release/HTTP-Message"
 arch="noarch"
-license="GPL-1.0-or-later Artistic-1.0-Perl"
-cpandepends="perl-lwp-mediatypes perl-encode-locale perl-http-date perl-uri perl-io-html"
-cpanmakedepends=""
-depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl perl-lwp-mediatypes perl-encode-locale perl-http-date perl-uri
+	perl-io-html"
+makedepends="perl-dev"
 checkdepends="perl-try-tiny"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/O/OA/OALDERS/$_pkgreal-$pkgver.tar.gz"
@@ -19,26 +18,22 @@ source="https://cpan.metacpan.org/authors/id/O/OA/OALDERS/$_pkgreal-$pkgver.tar.
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="46a5d4ee6af1bdb7b320ae8ad430b4dbff9a198a60d025703fa64a83284dfe6bee08041fc43372b6ea724ab973f84c3cbca5353d6158bdfbbed612577de61206  HTTP-Message-6.18.tar.gz"
+sha512sums="285d197f1ee28db3ebb00711264990a5527130961daecefb5bdb37feb67d13461b57d6570960025064a22099bf4f9037e146b8272be1832c433371cc0e2a712a  HTTP-Message-6.22.tar.gz"
