community/perl-module-install-authorrequires: move from testing

--- a/community/perl-module-install-authorrequires/APKBUILD
+++ b/community/perl-module-install-authorrequires/APKBUILD
@@ -9,8 +9,7 @@ pkgdesc="declare author-only dependencies"
 url="https://metacpan.org/release/Module-Install-AuthorRequires/"
 arch="noarch"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-module-install"
-depends="$cpandepends"
+depends="perl-module-install"
 makedepends="perl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/F/FL/FLORA/Module-Install-AuthorRequires-$pkgver.tar.gz"
