community/perl-module-install-authortests: move from testing

--- a/community/perl-module-install-authortests/APKBUILD
+++ b/community/perl-module-install-authortests/APKBUILD
@@ -9,8 +9,7 @@ pkgdesc="designate tests only run by module authors"
 url="https://metacpan.org/release/Module-Install-AuthorTests/"
 arch="noarch"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-module-install"
-depends="$cpandepends"
+depends="perl-module-install"
 makedepends="perl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/R/RJ/RJBS/Module-Install-AuthorTests-$pkgver.tar.gz"
