community/perl-datetime-format-xsd: move from testing

--- a/community/perl-datetime-format-xsd/APKBUILD
+++ b/community/perl-datetime-format-xsd/APKBUILD
@@ -8,9 +8,8 @@ pkgrel=1
 pkgdesc="Format DateTime according to xsd:dateTime"
 url="https://metacpan.org/release/DateTime-Format-XSD/"
 arch="noarch"
-license="GPL-1.0-or-later Artistic-1.0-Perl"
-cpandepends="perl-datetime-format-iso8601"
-depends="$cpandepends"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl-datetime-format-iso8601"
 makedepends="perl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/D/DR/DRUOSO/DateTime-Format-XSD-$pkgver.tar.gz"
