--- a/main/putty/APKBUILD
+++ b/main/putty/APKBUILD
@@ -1,12 +1,12 @@
 # Maintainer: Jeff Bilyk <jbilyk@alpinelinux.org>
 pkgname=putty
 pkgver=0.73
-pkgrel=1
+pkgrel=2
 pkgdesc="SSH and telnet client"
 url="https://www.chiark.greenend.org.uk/~sgtatham/putty/"
 arch="all"
 license="MIT"
-depends="ncurses-terminfo"
+depends="ncurses-terminfo-base"
 makedepends="linux-headers"
 subpackages="$pkgname-doc"
 source="http://the.earth.li/~sgtatham/putty/$pkgver/putty-$pkgver.tar.gz
