--- a/community/virt-manager/APKBUILD
+++ b/community/virt-manager/APKBUILD
@@ -1,13 +1,13 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=virt-manager
 pkgver=2.2.1
-pkgrel=0
+pkgrel=1
 pkgdesc="GUI for managing virtual machines"
 url="https://virt-manager.org/"
 arch="noarch"
 license="GPL-2.0-or-later"
 depends="python3 $pkgname-common py3-libxml2 py3-libvirt"
-_common_deps="libvirt-glib py3-gobject3 py3-requests spice-gtk vte3 libosinfo py3-cairo gtk-vnc>=0.5.2-r2"
+_common_deps="libvirt-glib py3-gobject3 py3-requests spice-gtk vte3 libosinfo py3-cairo gtk-vnc>=0.5.2-r2 gtksourceview4"
 makedepends="intltool glib"
 subpackages="$pkgname-doc $pkgname-lang
 	$pkgname-common
