{main,community,testing}: make terminals depend on ncurses-terminfo-base

--- a/community/xterm/APKBUILD
+++ b/community/xterm/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=xterm
 pkgver=346
-pkgrel=1
+pkgrel=2
 pkgdesc="X Terminal Emulator"
 options="!check" # Requires vttest
 url="http://invisible-island.net/xterm"
 arch="all"
 license="MIT"
-depends="ncurses-terminfo"
+depends="ncurses-terminfo-base"
 makedepends="libxaw-dev libxft-dev ncurses-dev"
 subpackages="$pkgname-doc"
 source="ftp://ftp.invisible-island.net/xterm/$pkgname-$pkgver.tgz
