--- a/main/tmux/APKBUILD
+++ b/main/tmux/APKBUILD
@@ -2,20 +2,18 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=tmux
 pkgver=2.9a
-pkgrel=0
+pkgrel=1
 pkgdesc="Tool to control multiple terminals from a single terminal"
 url="https://tmux.github.io"
 arch="all"
 license="ISC"
-depends="ncurses-terminfo"
+depends="ncurses-terminfo-base"
 makedepends="autoconf automake bsd-compat-headers libevent-dev ncurses-dev"
 subpackages="$pkgname-doc"
-source="https://github.com/tmux/tmux/releases/download/$pkgver/$pkgname-$pkgver.tar.gz"
+source="https://github.com/tmux/tmux/releases/download/$pkgver/tmux-$pkgver.tar.gz"
 
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -27,12 +25,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 
 	install -D -m644 example_tmux.conf \
