community/py3-pip: add manpages

--- a/community/py3-pip/APKBUILD
+++ b/community/py3-pip/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=py3-pip
 _pkgname=pip
 pkgver=20.0.2
-pkgrel=0
+pkgrel=1
 pkgdesc="A tool for installing and managing Python packages"
 options="!check" # Requires pytest
 url="http://www.pip-installer.org"
@@ -30,7 +30,11 @@ depends="
 	py3-webencodings
 	py3-contextlib2
 	"
+makedepends="
+	py3-sphinx
+	"
 subpackages="
+	$pkgname-doc
 	$pkgname-zsh-completion:zshcomp:noarch
 	$pkgname-fish-completion:fishcomp:noarch
 	$pkgname-bash-completion:bashcomp:noarch
@@ -60,10 +64,16 @@ prepare() {
 
 build() {
 	python3 setup.py build
+
+	# Build manpage
+	cd docs/
+	PYTHONPATH="$srcdir/pip-$pkgver/src/" sphinx-build -W -b man -d build/doctrees/man man build/man -c html
 }
 
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
+
+	install -Dm644 docs/build/man/* -t "$pkgdir"/usr/share/man/man1
 
 	PYTHONPATH="$pkgdir"/usr/lib/python3.8/site-packages "$pkgdir"/usr/bin/pip \
 		completion --bash | \
