main/zfs: fix paths in /etc/zfs/zfs{,-functions}
Upstream accidentally included pre-configured files in their tarball so make didn't
rebuild them with our parameters.

See https://github.com/tonyhutter/zfs/commit/2cc089a95faffa5dd1e0deffca3cf8e06eab41b5

Ref https://github.com/zfsonlinux/zfs/issues/9443

ref #11209

closes #11195

--- a/main/zfs/APKBUILD
+++ b/main/zfs/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=zfs
 pkgver=0.8.3
-pkgrel=0
+pkgrel=1
 pkgdesc="ZFS for Linux"
 url="http://zfsonlinux.org"
 arch="all !armhf !armv7"
@@ -19,6 +19,9 @@ source="https://github.com/zfsonlinux/zfs/releases/download/zfs-$pkgver/zfs-$pkg
 prepare() {
 	default_prepare
 	autoreconf -vif
+
+	# Upstream forgot to remove tainted files from the tarball...
+	rm etc/init.d/zfs etc/init.d/zfs-functions
 }
 
 build() {
