community/qt5-qtdeclarative: add -dbg subpkg

--- a/community/qt5-qtdeclarative/APKBUILD
+++ b/community/qt5-qtdeclarative/APKBUILD
@@ -6,13 +6,13 @@ _ver=${_ver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
 _v=${_ver/rc/RC}
-pkgrel=1
+pkgrel=2
 pkgdesc="Qt5 - QtDeclarative component"
 url="https://www.qt.io/developers/"
 arch="all" # Broken on armhf, upstream bug report https://bugreports.qt.io/browse/QTBUG-65246
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 makedepends="qt5-qtbase-dev python3 vulkan-headers"
-subpackages="$pkgname-dev"
+subpackages="$pkgname-dev $pkgname-dbg"
 
 case $pkgver in
 *_beta*|*_rc*) _rel=development_releases;;
