main/ncurses: move screen-256color to ncurses-terminfo-base

--- a/main/ncurses/APKBUILD
+++ b/main/ncurses/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=ncurses
 pkgver=6.1_p20200118
 _ver=${pkgver/_p/-}
-pkgrel=1
+pkgrel=2
 pkgdesc="Console display library"
 url="https://invisible-island.net/ncurses/"
 arch="all"
@@ -114,6 +114,7 @@ base() {
 	amove usr/share/terminfo/r/rxvt-256color
 	amove usr/share/terminfo/s/st-0*
 	amove usr/share/terminfo/s/st-256color
+	amove usr/share/terminfo/s/screen-256color
 	amove etc/terminfo
 
 	mkdir -p "$pkgdir"/etc/terminfo/s
