--- a/main/ncurses/APKBUILD
+++ b/main/ncurses/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=ncurses
 pkgver=6.1_p20190518
 _ver=${pkgver/_p/-}
-pkgrel=1
+pkgrel=2
 pkgdesc="Console display library"
 url="https://www.gnu.org/software/ncurses/"
 arch="all"
@@ -135,6 +135,7 @@ base() {
 	_mv usr/share/terminfo/r/rxvt-256color
 	_mv usr/share/terminfo/s/st-0*
 	_mv usr/share/terminfo/s/st-256color
+	_mv usr/share/terminfo/s/screen-256color
 	_mv etc/terminfo
 
 	mkdir -p "$pkgdir"/etc/terminfo/s
