community/grpc: upgrade to 1.27.2

--- a/community/grpc/APKBUILD
+++ b/community/grpc/APKBUILD
@@ -1,23 +1,24 @@
 # Contributor: wener <wenermail@gmail.com>
 # Maintainer: wener <wenermail@gmail.com>
 pkgname=grpc
-pkgver=1.26.0
+pkgver=1.27.2
 pkgrel=0
 pkgdesc="The C based gRPC (C++, Python, Ruby, Objective-C, PHP, C#) "
 url="https://grpc.io/"
-giturl="https://github.com/grpc/grpc"
-arch="all"
-license="Apache2"
+arch="all !ppc64le"
+license="Apache-2.0"
 depends="protobuf"
-makedepends="autoconf automake libtool libstdc++ protobuf-dev c-ares-dev openssl-dev gflags-dev gtest-dev zlib-dev yaml-dev"
+makedepends="autoconf automake libtool libstdc++ protobuf-dev c-ares-dev
+	openssl-dev gflags-dev gtest-dev zlib-dev yaml-dev linux-headers"
 subpackages="$pkgname-dev $pkgname-cli"
-_googletest_rev=ec44c6c1675c25b9827aacd08c02433cccde7780
+_googletest_rev=c9ccac7cb7345901884aabf5d1a786cfa6e2f397
+_abseil_cpp_rev=37dd2562ec830d547a1524bb306be313ac3f2556
 source="$pkgname-$pkgver.tar.gz::https://github.com/grpc/grpc/archive/v$pkgver.tar.gz
 		googletest-$_googletest_rev.tar.gz::https://github.com/google/googletest/archive/$_googletest_rev.tar.gz
+		abseil-cpp-$_abseil_cpp_rev.tar.gz::https://github.com/abseil/abseil-cpp/archive/$_abseil_cpp_rev.tar.gz
 		01-chttp2-maybe-uninitialized.patch
 		fix-install.patch
 		"
-builddir="$srcdir/$pkgname-$pkgver"
 options="!check"
 
 unpack() {
@@ -25,16 +26,17 @@ unpack() {
 	cd "$srcdir"
 	rm -rf $pkgname-$pkgver/third_party/googletest
 	ln -sfn $PWD/googletest-$_googletest_rev/ $pkgname-$pkgver/third_party/googletest
+
+	rm -rf $pkgname-$pkgver/third_party/abseil-cpp
+	ln -sfn $PWD/abseil-cpp-$_abseil_cpp_rev/ $pkgname-$pkgver/third_party/abseil-cpp
 }
 
 build() {
-	cd "$builddir"
 	make
 	make grpc_cli
 }
 
 package() {
-	cd "$builddir"
 	make install install-grpc-cli prefix="$pkgdir/usr"
 	rm -f "$pkgdir/usr/share/grpc/roots.pem"
 }
@@ -45,7 +47,8 @@ cli() {
 	mv "$pkgdir"/usr/bin/grpc_cli "$subpkgdir"/usr/bin/
 }
 
-sha512sums="4f7d067c582d0a9be7b7d4dd1e08acdbe6ff0686dfe92b5db5b7927f779410a4237acfd1c61d9f79eb2d00f86cf93cc7492fa372c1877e57c1aa23e9bb2648bb  grpc-1.26.0.tar.gz
-dd55ab745c43c5c953d8cebd2fb44b4bb2cb87c95194965bffd0bd8219332d5f073c22947c8a8b1e2652805dff1cff4b93fe69645d4c0d635f98ae2cf54af14a  googletest-ec44c6c1675c25b9827aacd08c02433cccde7780.tar.gz
+sha512sums="e85d186e3bc566a879103d7c10c560313d99feee3b3a73af09fddae343f0b596f47b369653000dd0681954b24a92bd33f39feac7b352ae1e1da8552dc8ea33b1  grpc-1.27.2.tar.gz
+7dda1e090d5054896899a250433d78ba9fcc004a60c886c93098c726ff12f70bb8d222112f8845e98c1ceacdb060b96699bb90d8f4207496546996195ae90343  googletest-c9ccac7cb7345901884aabf5d1a786cfa6e2f397.tar.gz
+31100784066b8ce44f296c25a32c31654356f483de1518d9bd623e7c3d34825eabd94bc97ded0dac72fe032d21d8801d4b671a82b23ee2ef97d142e8e0c78489  abseil-cpp-37dd2562ec830d547a1524bb306be313ac3f2556.tar.gz
 7fa146ce86ddd4f160bb1ca9ff01cb7aca6b2b8c9aa50e4fa6b84504b9117b104be0d1e31ccb452d846549dfe1e9012ceccfcdc1f2357ed567621d71fb8b08c5  01-chttp2-maybe-uninitialized.patch
 f72be2359d89278cec96049833c7c94868f45f3670a6eb900921e0139514f160aac40408755b8fdc8c2e612678037027266d80025a12781253ad1293e24bdead  fix-install.patch"
