community/ostree: split bash-completion

--- a/community/ostree/APKBUILD
+++ b/community/ostree/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=ostree
 pkgver=2020.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Operating system and container binary deployment and upgrades"
 url="https://github.com/ostreedev/ostree"
 arch="all"
@@ -10,7 +10,12 @@ license="LGPL-2.0-or-later"
 makedepends="bison glib-dev xz-dev libarchive-dev e2fsprogs-dev
 	libsoup-dev gpgme-dev fuse-dev linux-headers gtk-doc libxslt
 	automake autoconf libtool"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-dbg"
+subpackages="
+	$pkgname-dev
+	$pkgname-doc
+	$pkgname-dbg
+	$pkgname-bash-completion:bashcomp:noarch
+	"
 source="https://github.com/ostreedev/ostree/releases/download/v$pkgver/libostree-$pkgver.tar.xz
 	musl-fixes.patch
 	"
@@ -39,6 +44,14 @@ build() {
 
 package() {
 	make DESTDIR="$pkgdir" install
+}
+
+bashcomp() {
+	depends=""
+	pkgdesc="Bash completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
+
+	amove usr/share/bash-completion
 }
 
 sha512sums="9c0010c9b572d56de224305a79700cd14b0693d515a2f21d64b0535fc45c0407bde7267b023fc4bd4d7a5c872520736d273278ac8fa9117c259678f055078792  libostree-2020.2.tar.xz
