main/powertop: split bash-completion

--- a/main/powertop/APKBUILD
+++ b/main/powertop/APKBUILD
@@ -2,14 +2,17 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=powertop
 pkgver=2.11
-pkgrel=0
+pkgrel=1
 pkgdesc="Power consumption monitor"
 url="https://01.org/powertop"
 arch="all"
 license="GPL-2.0-only"
 makedepends="linux-headers ncurses-dev pciutils-dev zlib-dev libnl-dev
 	gettext-dev automake autoconf libtool"
-subpackages="$pkgname-doc"
+subpackages="
+	$pkgname-doc
+	$pkgname-bash-completion:bashcomp:noarch
+	"
 source="$pkgname-$pkgver.tar.gz::https://github.com/fenrus75/powertop/archive/v$pkgver.tar.gz
 	musl-fix-headers.patch
 	"
@@ -21,14 +24,20 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	LIBS="-lintl" ./configure --prefix=/usr --disable-nls
 	make
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
+}
+
+bashcomp() {
+	depends=""
+	pkgdesc="Bash completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
+
+	amove usr/share/bash-completion
 }
 
 sha512sums="bbe2882196f1b3ae39885d38dd86018576bfac5b5e8f16ea10c7dfd197197d0493ae4ce83c969417a4c4239c41dbcfada989063f14e2943c088a7489e43953b7  powertop-2.11.tar.gz
