community/ibus: split bash-completion

--- a/community/ibus/APKBUILD
+++ b/community/ibus/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=ibus
 pkgver=1.5.22
-pkgrel=0
+pkgrel=1
 pkgdesc="Next Generation Input Bus for Linux"
 url="https://github.com/ibus/ibus/wiki"
 arch="all !s390x" # librsvg
@@ -15,7 +15,13 @@ makedepends="
 	automake autoconf gnome-common gtk-doc wayland-dev wayland-protocols
 	dbus-x11 unicode-character-database xz unicode-emoji cldr-emoji-annotation
 "
-subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-emoji"
+subpackages="
+	$pkgname-dev
+	$pkgname-doc
+	$pkgname-lang
+	$pkgname-emoji
+	$pkgname-bash-completion:bashcomp:noarch
+	"
 source="
 	$pkgname-$pkgver.tar.gz::https://github.com/ibus/ibus/archive/$pkgver.tar.gz
 	0001-Use-more-portable-call-to-mktemp.patch
@@ -56,6 +62,14 @@ emoji() {
 
 	mkdir -p "$subpkgdir"/usr/share/ibus
 	mv "$pkgdir"/usr/share/ibus/dicts "$subpkgdir"/usr/share/ibus
+}
+
+bashcomp() {
+	depends=""
+	pkgdesc="Bash completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
+
+	amove usr/share/bash-completion
 }
 
 sha512sums="972da51eb5702692f13b4f4cff51b3765890e5a91f936b9fa6b6cafaf00f4d078dc39f14bd00f3883203d295d826647c509024dd197d726d4def8d13d45d71b4  ibus-1.5.22.tar.gz
