community/appstream-glib: split bash-completion

--- a/community/appstream-glib/APKBUILD
+++ b/community/appstream-glib/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=appstream-glib
 pkgver=0.7.17
-pkgrel=1
+pkgrel=2
 pkgdesc="Library for AppStream metadata"
 url="https://people.freedesktop.org/~hughsient/appstream-glib/"
 arch="all"
@@ -83,7 +83,6 @@ bashcomp() {
 	pkgdesc="Bash completions for $pkgname"
 	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
 
-	install -Dm644 "$pkgdir"/usr/share/bash-completion/completions/* \
-			"$subpkgdir"/usr/share/bash-completion/completions
+	amove usr/share/bash-completion/completions
 }
 sha512sums="72eae6057a4b18b6eca34c795c2bfd982fd7a31500b70beb9553bdf8a7617a03319a2813eb93af20f2e39678ef6ee524dee48b2cbcccde0736f9d10a547ca223  appstream-glib-0.7.17.tar.xz"
