community/networkmanager: split bash-completion

--- a/community/networkmanager/APKBUILD
+++ b/community/networkmanager/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=networkmanager
 pkgver=1.22.8
-pkgrel=0
+pkgrel=1
 pkgdesc="Network Management daemon"
 url="https://wiki.gnome.org/Projects/NetworkManager"
 arch="all"
@@ -36,7 +36,13 @@ makedepends="$depends_dev
 	libpsl-dev
 	python3
 	"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-openrc"
+subpackages="
+	$pkgname-dev
+	$pkgname-doc
+	$pkgname-lang
+	$pkgname-openrc
+	$pkgname-bash-completion:bashcomp:noarch
+	"
 source="https://download.gnome.org/sources/NetworkManager/${pkgver:0:4}/NetworkManager-$pkgver.tar.xz
 	$pkgname.conf
 	$pkgname.initd
@@ -106,6 +112,14 @@ To use iwd instead of the default wpa_supplicant install iwd, start its service 
 [device]
 wifi.backend=iwd
 EOF
+}
+
+bashcomp() {
+	depends=""
+	pkgdesc="Bash completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
+
+	amove usr/share/bash-completion
 }
 
 sha512sums="3533f6d0cfb2723078aece287101feda0d4f65a1f0160ae17dd77142ca5e126a0f27f5904c2e2c4dcdf9433dacc3990e1bf366f14e67b94fa1cd3006dd6b3a4c  NetworkManager-1.22.8.tar.xz
