community/networkmanager-elogind: split bash-completion

--- a/community/networkmanager-elogind/APKBUILD
+++ b/community/networkmanager-elogind/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=networkmanager-elogind
 pkgver=1.22.8
-pkgrel=0
+pkgrel=1
 pkgdesc="Network Management daemon"
 url="https://wiki.gnome.org/Projects/NetworkManager"
 arch="all"
@@ -37,7 +37,13 @@ makedepends="$depends_dev
 	python3
 	elogind-dev
 	"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-openrc"
+subpackages="
+	$pkgname-dev
+	$pkgname-doc
+	$pkgname-lang
+	$pkgname-openrc
+	$pkgname-bash-completion:bashcomp:noarch
+	"
 source="$pkgname-$pkgver.tar.xz::https://download.gnome.org/sources/NetworkManager/${pkgver:0:4}/NetworkManager-$pkgver.tar.xz
 	networkmanager.conf
 	networkmanager.initd
@@ -135,6 +141,16 @@ openrc() {
 
 	default_openrc
 }
+
+bashcomp() {
+	provides="networkmanager-bash-completion"
+	depends=""
+	pkgdesc="Bash completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
+
+	amove usr/share/bash-completion
+}
+
 sha512sums="3533f6d0cfb2723078aece287101feda0d4f65a1f0160ae17dd77142ca5e126a0f27f5904c2e2c4dcdf9433dacc3990e1bf366f14e67b94fa1cd3006dd6b3a4c  networkmanager-elogind-1.22.8.tar.xz
 a6e507260e2ceffad4cacb2b49a1d4f6b933e5ae8bc50c1bd56f828298c5dc8d9d17aa4be766faeacefbe3c6c0c748e4ef499a55bb5ee40f0f04bbf766fbbc82  networkmanager.conf
 5ac6d11b588c479de9c7e1fef79ed0a2c04dc159a2173636a6a77a2867c839cc1609860756109e9e794f23a02238a6d94834d8fb6fcb81a6be3ef1dbf4a34e6f  networkmanager.initd
