community/modemmanager: split bash-completion

--- a/community/modemmanager/APKBUILD
+++ b/community/modemmanager/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Stuart Cardall <developer@it-offshore.co.uk>
 pkgname=modemmanager
 pkgver=1.12.6
-pkgrel=0
+pkgrel=1
 pkgdesc="ModemManager library"
 url="http://www.freedesktop.org/wiki/Software/ModemManager"
 arch="all"
@@ -12,7 +12,14 @@ makedepends="$depends_dev gobject-introspection-dev gtk-doc vala
 	libgudev-dev polkit-dev libmbim-dev libqmi-dev linux-headers"
 checkdepends="glib-dev"
 options="!check" # https://bugs.freedesktop.org/show_bug.cgi?id=101197
-subpackages="$pkgname-lang $pkgname-doc libmm-glib:libmm $pkgname-dev $pkgname-openrc"
+subpackages="
+	$pkgname-lang
+	$pkgname-doc
+	libmm-glib:libmm
+	$pkgname-dev
+	$pkgname-openrc
+	$pkgname-bash-completion:bashcomp:noarch
+	"
 source="https://www.freedesktop.org/software/ModemManager/ModemManager-$pkgver.tar.xz
 	$pkgname.rules
 	$pkgname.initd"
@@ -66,6 +73,14 @@ EOF
 
 check() {
 	make check
+}
+
+bashcomp() {
+	depends=""
+	pkgdesc="Bash completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
+
+	amove usr/share/bash-completion
 }
 
 sha512sums="63c2f874c8ac62ddddf02735cc3dc0dec0c3ea62be39eb7f69cfb899ae04f6d14cfe59d63cd2fa4a5150afa15560d4a6db7a3fdb7c4467f228cd1b4b30fbd1ec  ModemManager-1.12.6.tar.xz
