testing/apache2-mod-authnz-external: upgrade to 3.3.3

--- a/testing/apache2-mod-authnz-external/APKBUILD
+++ b/testing/apache2-mod-authnz-external/APKBUILD
@@ -2,37 +2,34 @@
 # Maintainer: Nathan Rennie-Waldock <nathan.renniewaldock@gmail.com>
 pkgname=apache2-mod-authnz-external
 _realname=mod_authnz_external
-pkgver=3.3.2
+pkgver=3.3.3
 pkgrel=0
 pkgdesc="Apache module for external authentication"
-url="https://code.google.com/p/mod-auth-external/"
+url="https://github.com/phokz/mod-auth-external/"
 arch="all"
 license="Apache-2.0"
+options="!check" # No automated tests
 depends="apache2"
 makedepends="apache2-dev"
-install=""
 subpackages="$pkgname-doc"
-source="https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/mod-auth-external/$_realname-$pkgver.tar.gz
+source="https://github.com/phokz/mod-auth-external/archive/mod_authnz_external-$pkgver.tar.gz
 	$pkgname.apache2.conf"
-builddir="$srcdir/$_realname-$pkgver"
+builddir="$srcdir/mod-auth-external-$_realname-$pkgver"
 
 build() {
-	cd "$builddir"
-	make || return 1
-
+	make
 }
 
 package() {
-	cd "$builddir"
 	install -Dm755 ".libs/$_realname.so" "$pkgdir/usr/lib/apache2/$_realname.so"
 	install -Dm644 "$srcdir/$pkgname.apache2.conf" \
-		"$pkgdir/etc/apache2/conf.d/authnz-external-module.conf" || return 1
+	 	"$pkgdir/etc/apache2/conf.d/authnz-external-module.conf"
 	local f
 	for f in AUTHENTICATORS README; do
 		install -Dm644 "$f" \
-			"$pkgdir/usr/share/doc/$pkgname/$f" || return 1
+			"$pkgdir/usr/share/doc/$pkgname/$f"
 	done
 }
 
-sha512sums="8216744dbaed8dbde0d33658e38594463409e613412bd94f3e5f5a816f5e793a395ddda7c582ff1d1e69e48efdd1efb48c168d4cbc37cc7807a0dcb92eace0be  mod_authnz_external-3.3.2.tar.gz
+sha512sums="65b643870dcfc5cdc0343bc606ff74697473617ce9f6fe27cae40ae1b2dca904bb71b6ec8347c6b5c5e3819785432798f6e78820cdf66fd17b245371a41322d2  mod_authnz_external-3.3.3.tar.gz
 aad10cd570ae77b24a658898f1edb0ee08501e98ef76b68efd101037f53b7de123aecc87e535957b401925c665f952b381c4d4bf874c946ba0caeb979b222c35  apache2-mod-authnz-external.apache2.conf"
