community/py3-pyo: add setuptools to makedepends

--- a/community/py3-pyo/APKBUILD
+++ b/community/py3-pyo/APKBUILD
@@ -3,14 +3,14 @@
 pkgname=py3-pyo
 _pkgname=pyo
 pkgver=1.0.1
-pkgrel=0
+pkgrel=1
 pkgdesc="dedicated Python module for digital signal processing"
 url="http://ajaxsoundstudio.com/software/pyo/"
 arch="all"
 license="LGPL-3.0-or-later"
 options="!check"
 depends="python3 python3-tkinter"
-makedepends="python3-dev portaudio-dev libsndfile-dev"
+makedepends="python3-dev portaudio-dev libsndfile-dev py3-setuptools"
 source="$pkgname-$pkgver.tar.gz::https://github.com/belangeo/pyo/archive/$pkgver.tar.gz
 	portaudio-only.patch
 	remove-O3.patch
