--- a/testing/phosh/APKBUILD
+++ b/testing/phosh/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=phosh
-pkgver=0.1.8
-pkgrel=2
+pkgver=0.2.0
+pkgrel=0
 pkgdesc="A shell PoC for the Librem5"
 # Blocked on s390x by gnome-session, gnome-settings-daemon, squeekboard and libhandy
 # Blocked on ppc64le by gnome-session
@@ -10,14 +10,13 @@ arch="all !s390x !ppc64le"
 url="https://source.puri.sm/Librem5/phosh"
 license="GPL-3.0-only"
 depends="wayland-protocols phoc gnome-session bash dbus-x11 gnome-settings-daemon squeekboard libpulse dbus:org.freedesktop.Secrets"
-makedepends="gtk+3.0-dev meson ninja gnome-desktop-dev libhandy-dev gcr-dev upower-dev linux-pam-dev git cmake pulseaudio-dev networkmanager-dev polkit-elogind-dev libsecret-dev"
+makedepends="gtk+3.0-dev meson ninja gnome-desktop-dev libhandy-dev gcr-dev upower-dev linux-pam-dev git cmake pulseaudio-dev networkmanager-dev polkit-elogind-dev libsecret-dev feedbackd-dev"
 subpackages="$pkgname-lang"
 source="
 	$pkgname-$pkgver.tar.xz::https://repo.pureos.net/pureos/pool/main/p/phosh/phosh_$pkgver.tar.xz
 	phosh.desktop
 	sm.puri.OSK0.desktop"
 options="!check" # Needs a running Wayland compositor
-builddir="$srcdir/$pkgname"
 
 build() {
 	meson \
@@ -44,6 +43,6 @@ package() {
 		"$pkgdir"/usr/share/applications/sm.puri.OSK0.desktop
 
 }
-sha512sums="79b790704bd50a210ee40cc88f753599948203c5155d7c5776cb47b9bde287401911ef108ff91620dc64ea9fd6f3b09709b74d8602e636874f146942a4999bfb  phosh-0.1.8.tar.xz
+sha512sums="a4e9a739450117bf483508617c905ac55082a409d961cd3bfcc357321c5c02be3fe38223c0a1dffaee092ad288d8dba734916f276584338930bc9c258b7ffdc6  phosh-0.2.0.tar.xz
 6644870edbbbc6b88d6e19f7771d81dba1a11066c2b34e4c22736db73a2dfd0d4909b4967503059c35385c5139a834a5c06a3c56b148ba1275d7f089c0c5f33c  phosh.desktop
 f97019598323276cf97ae62f04b6245983198e04b228ddc605835ee46845d9b88c6890fb86e97e4bb6f1ad73361437d9ed18c91e81fe1284a88cdcb92d3fdc69  sm.puri.OSK0.desktop"
