--- a/main/apache2-mod-wsgi/APKBUILD
+++ b/main/apache2-mod-wsgi/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Matt Smith <mcs@darkregion.net>
 pkgname=apache2-mod-wsgi
 _realname=mod_wsgi
-pkgver=4.6.8
+pkgver=4.7.1
 pkgrel=0
 pkgdesc="Python WSGI Module for Apache2"
 url="https://github.com/GrahamDumpleton/mod_wsgi"
 arch="all"
 license="Apache-2.0"
-depends="apache2 python3"
+depends="apache2"
 makedepends="apache2-dev python3-dev"
 options="!check" # no tests provided
 subpackages="$pkgname-doc"
@@ -32,5 +32,5 @@ package() {
 		"$pkgdir"/usr/share/doc/$pkgname/LICENSE
 }
 
-sha512sums="2ef93c48335035effac59b5641ea9b846e241d2e09c0d825da487cbec9d38262af096f97a11c2cc2910c4727c2aa46aa8590da458964f540cb4ac18880954e91  apache2-mod-wsgi-4.6.8.tar.gz
+sha512sums="cbb5ec53d55e47a83f2b0630527c6a52b48ef21d5d2c18adcb875fc455795b39b3c93f4a86dfbf9738c0bd554d86cc4912cc9ff83c428af302ab94a61f66b5b4  apache2-mod-wsgi-4.7.1.tar.gz
 5b36a458bd3539e58ea61ec405c4f5c5e0001a644263b0e1f8421a5c7fc7884b6df1355674a9d9b610780b5e9db6ce66d0ae1bbc0e512ecb027c3757209152c8  apache2-mod-wsgi.apache2.conf"
