testing/i2pd: upgrade to 2.30.0

--- a/testing/i2pd/APKBUILD
+++ b/testing/i2pd/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: l-n-s <supervillain@riseup.net>
 # Contributor: r4sas <r4sas@i2pmail.org>
 pkgname=i2pd
-pkgver=2.29.0
-pkgrel=2
+pkgver=2.30.0
+pkgrel=0
 pkgdesc="I2P Router written in C++"
 url="https://github.com/PurpleI2P/i2pd"
 arch="all"
@@ -12,7 +12,7 @@ depends="musl-utils"
 makedepends="boost-dev miniupnpc-dev openssl-dev openssl zlib-dev"
 options="!check" # No test suite
 install="$pkgname.pre-install"
-source="https://github.com/PurpleI2P/i2pd/archive/$pkgver/$pkgname-$pkgver.tar.gz
+source="https://github.com/PurpleI2P/i2pd/archive/$pkgver/i2pd-$pkgver.tar.gz
 	i2pd.initd
 	i2pd.confd
 	"
@@ -49,6 +49,6 @@ package() {
 		"$pkgdir"/etc/conf.d/$pkgname
 }
 
-sha512sums="dfa1c212c217eb2eae40f3f8151d35164c52df630e658dcb261cc9532623377dee376d1c493e8b8bdcae3245ae389e06adf5ef551951d4e139f1626b8432c15b  i2pd-2.29.0.tar.gz
+sha512sums="d27c5e5b7ae7c78be14ad96ac458c0f3a45e31ee5fbdf59d5c6278d0195909badc5917a258b5de37d6a255c20a8c3cb0c0ddc3291a110444a96f475b662a119b  i2pd-2.30.0.tar.gz
 5a95beef635fc2f5beecee314964fd41713ed61f92c4e972276208e0a2c86604c2b42a8e922863fc658a7a5789c9f43fddf7f76350fc281a44f2f42258a01201  i2pd.initd
 ba94e5505f4eeb9a32159aa0a3b7f68ff077abb9704800f70502ac75fd5bcfcb20450ebd983d0523beca2d13e718d7bf888f53ec455d1f41701c16d09c3b2d28  i2pd.confd"
