community/at: fix url

--- a/community/at/APKBUILD
+++ b/community/at/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Alexander Belkov <msun00@yandex.ru>
 pkgname=at
 pkgver=3.2.1
-pkgrel=0
+pkgrel=1
 pkgdesc="AT and batch delayed command scheduling utility and daemon"
-url="http://blog.calhariz.com/tag/at"
+url="http://blog.calhariz.com/index.php?tag/at"
 arch="all"
 options="!check suid"  # No test suite.
 license="GPL-2.0-or-later"
