--- a/main/b43-fwcutter/APKBUILD
+++ b/main/b43-fwcutter/APKBUILD
@@ -2,26 +2,21 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=b43-fwcutter
 pkgver=019
-pkgrel=0
+pkgrel=1
 pkgdesc="Tool to extract firmware from Broadcom drivers"
-url="http://linuxwireless.org/en/users/Drivers/b43"
+url="https://wireless.wiki.kernel.org/en/users/Drivers/b43"
 arch="all"
-license="BSD"
-depends=""
-makedepends=""
-install=""
+license="BSD-2-Clause"
+options="!check" # No test suite
 subpackages="$pkgname-doc"
 source="http://bues.ch/b43/fwcutter/b43-fwcutter-$pkgver.tar.bz2"
 
-_builddir="$srcdir"/b43-fwcutter-$pkgver
 build() {
-	cd "$_builddir"
-	make || return 1
+	make
 }
 
 package() {
-	cd "$_builddir"
-	make PREFIX="$pkgdir"/usr install || return 1
+	make PREFIX="$pkgdir"/usr install
 	mkdir -p "$pkgdir"/usr/share/
 	mv "$pkgdir"/usr/man "$pkgdir"/usr/share/
 }
