main/libcrystalhd: modernize
* Bumped pkgrel to update url
* Clarified license

--- a/main/libcrystalhd/APKBUILD
+++ b/main/libcrystalhd/APKBUILD
@@ -1,71 +1,50 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
-
 pkgname=libcrystalhd
 pkgver=20130708
 _date=$pkgver
-pkgrel=2
+pkgrel=3
 pkgdesc="Broadcom CrystalHD kernel driver library"
 url="https://git.linuxtv.org/jarod/crystalhd.git"
 arch="x86 x86_64"
-license="GPL-2.0"
-depends=""
-depends_dev=""
-makedepends="$depends_dev linux-headers"
-install=""
+license="LGPL-2.1-only"
+options="!check" # No test suite
+makedepends="linux-headers"
 subpackages="$pkgname-dev"
-source="https://dev.alpinelinux.org/archive/$pkgname/$pkgname-${_date}.tar.gz
+source="https://dev.alpinelinux.org/archive/libcrystalhd/libcrystalhd-$_date.tar.gz
 	gcc-opts-fix.patch
 	"
 
 _giturl="git://linuxtv.org/jarod/crystalhd.git"
 _upload="dev.alpinelinux.org:/archive/$pkgname/"
-_libdir="$srcdir/$pkgname-$_date/linux_lib/libcrystalhd"
-_builddir="$srcdir/$pkgname-$_date"
+builddir="$srcdir/$pkgname-$_date/linux_lib/libcrystalhd"
 
 snapshot() {
-        local _date=$(date +%Y%m%d)
-        local _pkg=$pkgname-$_date.tar.gz
-        mkdir -p "$srcdir"
-        cd "$srcdir"
-        msg "Creating snapshot: $_pkg"
-        rm -rf ${_giturl##*/}
-        git clone --depth=1 --bare $_giturl || return 1
-        git --git-dir ${_giturl##*/} archive -o $_pkg \
-                --prefix=$pkgname-$_date/ HEAD \
-                || return 1
-        msg "Uploading to $_upload"
-        rsync -Lave ssh $_pkg $_upload || return 1
-        cd "$startdir"
-        sed -i -e "s/^pkgver=.*/pkgver=$_date/" \
-                APKBUILD || return 1
-        abuild checksum
-}
-
-prepare() {
-	local i
-	cd "$_builddir"
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
+	local _date=$(date +%Y%m%d)
+	local _pkg=$pkgname-$_date.tar.gz
+	mkdir -p "$srcdir"
+	cd "$srcdir"
+	msg "Creating snapshot: $_pkg"
+	rm -rf ${_giturl##*/}
+	git clone --depth=1 --bare $_giturl
+	git --git-dir ${_giturl##*/} archive -o $_pkg \
+		--prefix=$pkgname-$_date/ HEAD
+	msg "Uploading to $_upload"
+	rsync -Lave ssh $_pkg $_upload
+	cd "$startdir"
+	sed -i -e "s/^pkgver=.*/pkgver=$_date/" \
+		APKBUILD
+	abuild checksum
 }
 
 build() {
-	cd "$_libdir"
-	msg "building library"
-	make || return 1
+	msg "Building library"
+	make
 }
 
 package() {
-	cd "$_libdir"
-	make DESTDIR="$pkgdir" install || return 1
-}
-
-dev() {
-	default_dev
+	make DESTDIR="$pkgdir" install
 }
 
 sha512sums="70a84f8102250a797b658153d7cd2ed2b05d00d801b52a0b6f877e0feecd55a83c32032c5b66dba8cb53863dabc5536dde6405087403d8fe730c27f6ea3ee1b2  libcrystalhd-20130708.tar.gz
-7ef9034fd3ee8b4f94ac90d2c16a1c47ec856544924d4242ef93e9a73bd6487845f1a3dbc86b4cdadbad5a24a65495431a1961077d34d498386462a68a951359  gcc-opts-fix.patch"
+8ff2710dfd1580d1dc05a67e2bf07679f37de67768df6267a7037bc25f94a4ea46be4c52057b4a849fe8774bd9c80f75df8f95a62eeec2f7b7a1e6622f6d9bae  gcc-opts-fix.patch"
