--- a/main/dev86/APKBUILD
+++ b/main/dev86/APKBUILD
@@ -2,70 +2,63 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=dev86
 pkgver=0.16.21
-pkgrel=0
+pkgrel=1
 pkgdesc="A real mode 80x86 assembler and linker"
-url="http://v3.sk/~lkundrak/dev86/"
+url="https://github.com/lkundrak/dev86/"
 arch="all"
-license="GPL+ and GPL-2.0-or-later and LGPL-2.0-or-later"
-depends=
+license="GPL-2.0-or-later AND LGPL-2.0-or-later"
+# options="!check"
 makedepends="bash coreutils"
-install=""
 subpackages="$pkgname-doc"
-source="http://v3.sk/~lkundrak/dev86/Dev86src-$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/lkundrak/dev86/archive/v$pkgver.tar.gz
 	dev86-noelks.patch
 	dev86-pic.patch
 	dev86-long.patch
 	"
 
-_builddir="$srcdir"/dev86-$pkgver
 prepare() {
-	local i
-	cd "$_builddir"
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
+	default_prepare
 	# use our CFLAGS
 	sed -i -e "s/-O2 -g/${CFLAGS}/" \
-		makefile.in || return 1
+		makefile.in
 #	if [ "$CARCH" = x86_64 ]; then
 		sed -i \
 			-e 's,alt-libs elksemu,alt-libs,' \
 			-e 's,install-lib install-emu,install-lib,' \
-			makefile.in || return 1
+			makefile.in
 #	fi
 	sed -i \
 		-e "s:-O2 -g:${CFLAGS}:" \
 		-e '/INEXE=/s:-s::' \
-		makefile.in || return 1
+		makefile.in
 	# no stripping
 	sed -i -e '/INSTALL_OPTS=/s:-s::' \
-		bin86/Makefile || return 1
+		bin86/Makefile
 	sed -i -e '/install -m 755 -s/s:-s::' \
-		dis88/Makefile || return 1
+		dis88/Makefile
 }
 
 build() {
-	cd "$_builddir"
 	export CPPFLAGS=""
 	export SHELL=/bin/bash
 	msg "building bcc86 unproto copt as86 ld86"
 	make -j1 bcc86 unproto copt as86 ld86 CFLAGS="$CFLAGS" CC="${CC:-gcc}" \
-		NATIVE='-DA_OUT_INCL=\"../libc/include/a.out.h\"' \
-		|| return 1
+		NATIVE='-DA_OUT_INCL=\"../libc/include/a.out.h\"'
 	msg "building cpp"
-	make -C cpp CFLAGS="$CFLAGS"  CC="${CC:-gcc}" || return 1
+	make -C cpp CFLAGS="$CFLAGS"  CC="${CC:-gcc}"
 	msg "building ar"
-	make -C ar CFLAGS="$CFLAGS" CC="${CC:-gcc}" || return 1
+	make -C ar CFLAGS="$CFLAGS" CC="${CC:-gcc}"
 	msg "building ld"
-	make -C ld CFLAGS="$CFLAGS" CC="${CC:-gcc}" || return 1
+	make -C ld CFLAGS="$CFLAGS" CC="${CC:-gcc}"
 	msg "building the rest..."
-	make -j1 DIST="$pkgdir" CC="${CC:-gcc}" || return 1
+	make -j1 DIST="$pkgdir" CC="${CC:-gcc}"
+}
+
+check() {
+	make tests
 }
 
 package() {
-	cd "$_builddir"
 	make DIST="$pkgdir" \
 		MANDIR=/usr/share/man \
 		LIBDIR=/usr/lib/bcc \
@@ -74,7 +67,7 @@ package() {
 		install install-man
 }
 
-sha512sums="6d35dc3c7f9735cf7967cdb2bc0f7bee967ae26667cd8cef56bbdf7d7855ef1d35057db4c0031ff86b9b95d3c8ee44aff408446115b35b6c10cf207a33838016  Dev86src-0.16.21.tar.gz
-70eb52bd314a10b2f2b2ea00c88b398772f0a998cdd9db2d73904bc3e7db6cac8317f10b8dd838c04659d54cd5411d1a8b63dc89257ef04048c07b85b182e966  dev86-noelks.patch
+sha512sums="e51d94cecc298f860c1dcbc225d5c77a18769eb7a51f888853ca3bdb3cc6596c07d67cd9b403f7d52155716eb1708396461dc596cd02728d762d0ed5e87d054f  dev86-0.16.21.tar.gz
+a4f2d3caa94f917bfd55eb8f26544b097362e0b5aee91720f0ddb6a1c91284ab875121c176c3225ac54cd2eb08ef5128edcdec4d53960ee64cb0d5cb5c1257d3  dev86-noelks.patch
 1dafea998e3d62e71f069eb6bd6e0e05c7152a0470fbf9baa82c3ac9e3f5fe20c342ed0b35be91e82ce83638346a3e8c9855e77f4a71656f2ee7590e999e55fb  dev86-pic.patch
 94c7532724d6c02a389303f1ce023e13fe95abecb86e1e4126504701cc755053ad810514e599c1151d166c45c51e1af15cbfac9e25895408b1133feb86dce21e  dev86-long.patch"
