--- a/main/docs/APKBUILD
+++ b/main/docs/APKBUILD
@@ -1,34 +1,13 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=docs
 pkgver=0.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Meta package for pulling in all documentation"
-url="http://alpinelinux.org"
+url="https://alpinelinux.org"
 arch="all"
 license="MIT"
 depends="man"
-depends_dev=""
-makedepends="$depends_dev"
-install=""
-subpackages=""
-source=""
-
-_builddir=
-prepare() {
-	local i
-	cd "$_builddir"
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
-}
-
-build() {
-	return 0
-}
 
 package() {
 	mkdir -p "$pkgdir"
 }
-
