testing/libsoundio: modernize
* Fix url
* Update description to match projects own
* Clarify !check comment
* Update build() to match new AL cmake standard

--- a/testing/libsoundio/APKBUILD
+++ b/testing/libsoundio/APKBUILD
@@ -1,11 +1,11 @@
 # Maintainer: Mark Jynx <markjynx@cock.li>
 pkgname="libsoundio"
 pkgver="2.0.0"
-pkgrel=0
-pkgdesc="lightweight abstraction over various sound drivers"
-url="https://libsound.io"
+pkgrel=1
+pkgdesc="C library for cross-platform real-time audio input and output"
+url="http://libsound.io"
 arch="all"
-options="!check"  # No test suite.
+options="!check" # Tests are not automated
 license="MIT"
 depends_dev="alsa-lib-dev"
 makedepends="cmake $depends_dev"
@@ -13,13 +13,18 @@ subpackages="$pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/andrewrk/libsoundio/archive/$pkgver.tar.gz"
 
 build() {
+	if [ "$CBUILD" != "$CHOST" ]; then
+		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
+	fi
 	cmake \
-		-DCMAKE_INSTALL_PREFIX=/usr  \
+		-DCMAKE_BUILD_TYPE=None \
+		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib   \
 		-DBUILD_STATIC_LIBS=OFF      \
 		-DBUILD_EXAMPLE_PROGRAMS=OFF \
-		-DBUILD_TESTS=OFF            \
-		.
+		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
+		-DCMAKE_C_FLAGS="$CFLAGS" \
+		${CMAKE_CROSSOPTS} .
 	make
 }
 
