community/libdmtx: fix url

--- a/community/libdmtx/APKBUILD
+++ b/community/libdmtx/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=libdmtx
 pkgver=0.7.5
-pkgrel=0
+pkgrel=1
 pkgdesc="A software for reading and writing Data Matrix 2D barcodes"
-url="https://libdmtx.sourceforge.net/"
+url="https://github.com/dmtx"
 arch="all"
 license="BSD-2-Clause"
 makedepends="autoconf automake libtool"
