--- a/main/libc-dev/APKBUILD
+++ b/main/libc-dev/APKBUILD
@@ -2,11 +2,12 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libc-dev
 pkgver=0.7.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Meta package to pull in correct libc"
-url="http://alpinelinux.org"
+url="https://alpinelinux.org"
 arch="noarch"
-license="BSD"
+license="BSD-2-Clause AND BSD-3-Clause"
+options="!check" # No test suite
 makedepends_build=" "
 makedepends_host=" "
 makedepends="$makedepends_build $makedepends_host"
@@ -20,15 +21,6 @@ source="sys-cdefs.h
 
 prepare() {
 	mkdir -p "$builddir"
-	cd "$builddir"
-}
-
-build() {
-	return 0
-}
-
-check() {
-	return 0
 }
 
 package() {
