--- a/main/librsvg/APKBUILD
+++ b/main/librsvg/APKBUILD
@@ -1,11 +1,11 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=librsvg
-pkgver=2.40.20
+pkgver=2.40.21
 pkgrel=0
 pkgdesc="SAX-based renderer for SVG files into a GdkPixbuf"
 url="http://live.gnome.org/LibRsvg"
 arch="all"
-license="LGPL-2.0+"
+license="LGPL-2.0-or-later"
 subpackages="$pkgname-dev $pkgname-doc"
 depends=
 depends_dev="gtk+2.0-dev libcroco-dev libgsf-dev"
@@ -16,6 +16,10 @@ source="https://download.gnome.org/sources/$pkgname/${pkgver%.*}/$pkgname-$pkgve
 	"
 # sporadic testsuite failures
 options="!check"
+
+# secfixes:
+#   2.40.21-r0:
+#     - CVE-2019-20446
 
 build() {
 	cd "$builddir"
@@ -39,4 +43,4 @@ package() {
 	rm -rf "$pkgdir"/usr/lib/mozilla
 }
 
-sha512sums="cdd8224deb4c3786e29f48ed02c32ed9dff5cb15aba574a5ef845801ad3669cfcc3eedb9d359c22213dc7a29de24c363248825adad5877c40abf73b3688ff12f  librsvg-2.40.20.tar.xz"
+sha512sums="db0563d8e0edaae642a6b2bcd239cf54191495058ac8c7ff614ebaf88c0e30bd58dbcd41f58d82a9d5ed200ced45fc5bae22f2ed3cf3826e9348a497009e1280  librsvg-2.40.21.tar.xz"
