community/lha: modernize
* Fix url
* Add check()

--- a/community/lha/APKBUILD
+++ b/community/lha/APKBUILD
@@ -1,38 +1,37 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=lha
 pkgver=1.14i
-pkgrel=2
+pkgrel=3
 pkgdesc="Compression and archive utility for LH-7 format archives"
-url="http://www.infor.kanazawa-it.ac.jp/~ishii/lhaunix/"
+url="https://github.com/jca02266/lha/"
 arch="all"
 license="custom"
 subpackages="$pkgname-doc"
-depends=""
-makedepends=""
-install=
-source="http://osdn.dl.sourceforge.jp/lha/22231/$pkgname-$pkgver-ac20050924p1.tar.gz"
+checkdepends="bash"
+source="http://osdn.dl.sourceforge.jp/lha/22231/lha-$pkgver-ac20050924p1.tar.gz"
+builddir="$srcdir/$pkgname-$pkgver-ac20050924p1"
 
-_builddir="$srcdir/$pkgname-$pkgver-ac20050924p1"
 prepare() {
-	cd "$_builddir"
-	update_config_sub || return 1
+	default_prepare
+	update_config_sub
 }
 
 build() {
-	cd "$_builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
-		--infodir=/usr/share/info \
-		|| return 1
-	make || return 1
+		--infodir=/usr/share/info
+	make
+}
+
+check() {
+	make check
 }
 
 package() {
-	cd "$_builddir"
 	make "DESTDIR=$pkgdir" install
 	#install -D -m755 $srcdir/lha $pkgdir/usr/bin/lha
 }
