main/krb5-conf: fix url

--- a/main/krb5-conf/APKBUILD
+++ b/main/krb5-conf/APKBUILD
@@ -6,9 +6,9 @@
 #
 pkgname=krb5-conf
 pkgver=1.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Shared krb5.conf for both MIT krb5 and heimdal"
-url="http://web.mit.edu/kerberos/www/ http://h5l.org"
+url="https://web.mit.edu/kerberos/www/"
 arch="noarch"
 options="!check"  # Single config file.
 license="MIT"
