main/exiv2: remove -test binaries
fixes #11259

--- a/main/exiv2/APKBUILD
+++ b/main/exiv2/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=exiv2
 pkgver=0.27.2
-pkgrel=3
+pkgrel=4
 pkgdesc="Exif and Iptc metadata manipulation library and tools."
 url="https://exiv2.org"
 arch="all"
@@ -27,28 +27,21 @@ builddir="$srcdir"/$pkgname-$pkgver-Source
 #     - CVE-2019-13113
 #     - CVE-2019-13114
 
-prepare() {
-	default_prepare
-	mkdir build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake .. \
+	cmake -B build . \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	cmake --build .
+	make -C build
 }
 
 check() {
-	cd "$builddir"/build
-	make test
+	make -C build test
 }
 
 package() {
-	cd "$builddir"/build
-	make DESTDIR="$pkgdir" install
+	make -C build DESTDIR="$pkgdir" install
+	rm -f "$pkgdir"/usr/bin/*-test
 }
 
 sha512sums="39eb7d920dce18b275ac66f4766c7c73f7c72ee10e3e1e43d84c611b24f48ce20a70eac6d53948914e93242a25b8b52cc4bc760ee611ddcd77481306c1f9e721  exiv2-0.27.2-Source.tar.gz
