--- a/main/bctoolbox/APKBUILD
+++ b/main/bctoolbox/APKBUILD
@@ -1,21 +1,21 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=bctoolbox
-pkgver=4.3.0
+pkgver=4.3.1
 pkgrel=0
 pkgdesc="Utilities library used by Belledonne Communications softwares like belle-sip, mediastreamer2 and linphone"
 url="https://github.com/BelledonneCommunications/bctoolbox"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 options="!check" # bcunit not available
 makedepends="cmake mbedtls-dev"
 subpackages="$pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/BelledonneCommunications/bctoolbox/archive/$pkgver.tar.gz
 	cmake-bcunit-fix.patch"
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
 	cmake \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_MODULE_PATH=/usr/lib/cmake \
 		-DCMAKE_INSTALL_LIBDIR=lib \
@@ -25,7 +25,7 @@ build() {
 		-DENABLE_STATIC=NO \
 		-DENABLE_TESTS_COMPONENT=OFF \
 		-DENABLE_SHARED=YES .
-	make	
+	make
 }
 
 check() {
@@ -36,7 +36,7 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-dev()  {
+dev() {
 	default_dev
 	mkdir -p "$subpkgdir"/usr/lib/cmake/bctoolbox
 	mv "$pkgdir"/usr/share/bctoolbox/cmake/* "$subpkgdir"/usr/lib/cmake/bctoolbox
@@ -46,5 +46,5 @@ dev()  {
 	rmdir "$pkgdir"/usr/share
 }
 
-sha512sums="bd21b3d3e2143147fb26d3711cb4cb94b65b390f0332c036edf58ab01da3505751c349596bdb1289ab1769c496391804e4f7ded1ba41274491b38e39925eef04  bctoolbox-4.3.0.tar.gz
+sha512sums="89d4ead8f08fa6e20735e4cfb29666273e1cb47c23e8ed8c3992b53eae966188a57e68259a224b2857fdf8b1f829784c8ad661cac9fbee6f99b8e2493c067a72  bctoolbox-4.3.1.tar.gz
 466d2a7aa33952c8086c698030af0addc79373aa31104cbe6133d352682439ae5c30055ea4f162cc9b6b9fc54bf3dea0ddcff78e0042e7ce43833d82b9487116  cmake-bcunit-fix.patch"
