testing/apparmor: make apparmor-utils depend on py3-apparmor
fixes #11256

--- a/testing/apparmor/APKBUILD
+++ b/testing/apparmor/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Allan Garret <allan.garret@gmail.com>
 pkgname=apparmor
 pkgver=2.13.3
-pkgrel=2
+pkgrel=3
 pkgdesc="Linux application security framework - mandatory access control for programs"
 options="!check" # Failing with python3.8
 url="https://gitlab.com/apparmor/apparmor/wikis/home"
@@ -150,7 +150,7 @@ _perl_apparmor() {
 
 _apparmor_utils() {
 	pkgdesc="AppArmor userspace utilities"
-	depends="libapparmor perl python3 bash"
+	depends="py3-apparmor libapparmor perl python3 bash"
 
 	cd "$builddir"
 	make -C utils install DESTDIR="$subpkgdir" BINDIR="$subpkgdir"/usr/bin
